--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+.main{
+    background: linear-gradient(to bottom, #800000 0%, #ff9900 100%);
+    height: 100vh;
+}
+.main1{
+    color: antiquewhite;
+    font-weight: bold !important;
+}
+.main2{
+ background-color: orange;
+}
 .stylebutton {
     padding: 8px;
     margin: 5px;
